log
Tue 21 Mar 2023 11:25:43 PM UTC: 
 tests:  0|6
total_score: 0/70
28e5d2a
Wed 22 Mar 2023 01:17:32 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb123ca
Wed 22 Mar 2023 01:29:07 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
e7cf552
Wed 22 Mar 2023 01:31:21 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:7: error: expected identifier or ‘(’ before ‘->’ token
   41 |   List->head = node->data;
      |       ^~
Compilation failed
b4d7419
Wed 22 Mar 2023 01:31:45 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘firstList’:
list.c:40:17: error: ‘node’ is used uninitialized [-Werror=uninitialized]
   40 |   Node * node = createNode(node);
      |                 ^~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f17a134
Wed 22 Mar 2023 01:32:08 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
32ea6da
Wed 22 Mar 2023 01:32:39 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
991547f
